Bug 207213 - "New Tab" and "Close tab" buttons disappear when closing a split view
Summary: "New Tab" and "Close tab" buttons disappear when closing a split view
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-12 23:14 UTC by Fredrik Larsson
Modified: 2011-08-15 01:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
konsole after closing a splitted view (149.67 KB, image/png)
2009-09-13 15:09 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fredrik Larsson 2009-09-12 23:14:27 UTC
Version:            (using KDE 4.3.1)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Gentoo Packages

Reproducible: Always

How to reproduce:
    * Open a konsole, verify that buttons are present.
    * Split it T/B or L/R (Two views of same terminal is ok, no extra tab needed)
    * Close the initial view
    * "New tab" and "Close tab" buttons are gone.

The buttons comes back if one reactivates "Show 'New tab' and 'close tab' buttons..." under Settings -> Edit current profile... -> Tabs.

It doesn't really turn the options off, it just deactivates it for the session. A new konsole will have the buttons back.
Comment 1 FiNeX 2009-09-13 15:09:20 UTC
Created attachment 36921 [details]
konsole after closing a splitted view

On current trunk (r1022847) I've experienced a singular behaviour while trying to test this bug. Look at the screenshot, I don't know if it is related.
Comment 2 Fredrik Larsson 2009-09-13 21:04:15 UTC
For me in 4.3.1 release there are no graphics bugs like in your image, everything looks as it should but the buttons are gone.
The best way to describe the problem is:

It is as if each split view is rendered in a separate container, tab bar, buttons and all. When the primary view is closed it's like if the whole container and all it's contents are removed from view and destroyed and then the remaining container(s) are repositioned and re-sized without checking if the buttons needs to be added to the remaining view.
Comment 3 Fredrik Larsson 2009-10-08 20:52:25 UTC
Same on Gentoo kde-4.3.2
Comment 4 Jekyll Wu 2011-07-19 08:07:04 UTC
I can reproduce it with 2.7.999

It seems when user split the view, the newly created ViewContainer widget does not
has its own new-tab and close-tab button.
Comment 5 Jekyll Wu 2011-08-15 01:16:58 UTC
Git commit f4b188658dd0d3142fbf2a61b770f08ef802cb30 by Jekyll Wu.
Committed on 14/08/2011 at 11:46.
Pushed by jekyllwu into branch 'master'.

Newly created container should also show new & close button.

BUG: 207213
REVIEW: 102324

M  +3    -0    src/ViewManager.cpp

http://commits.kde.org/konsole/f4b188658dd0d3142fbf2a61b770f08ef802cb30