Newly created container should also show new & close button.

BUG: 207213
REVIEW: 102324